tracks Gemfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,9 @@ capybara-*.html
 /public/system
 /coverage/
 /spec/tmp
-/Gemfile.lock
 **.orig
 rerun.txt
 pickle-email-*.html
-Gemfile.lock
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
@@ -27,7 +25,7 @@ config/secrets.yml
 /vendor/bundle
 
 # these should all be checked in to normalize the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
+# .ruby-version, .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
