--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -14,3 +14,6 @@
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+development:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
